# iortcw

SP/: CMakeLists.txt
SP/cmake/: TargetArch.cmake  clang-toolchain.cmake  sysconf.h.cmake
SP/code/botlib/: CMakeLists.txt
SP/code/cgame/: CMakeLists.txt
SP/code/client/: CMakeLists.txt
SP/code/game/: CMakeLists.txt
SP/code/jpeg-8c/: CMakeLists.txt
SP/code/splines/: CMakeLists.txt
SP/code/ui/: CMakeLists.txt
